# tradingDeportivo

./: .env.example  .gitignore  PROYECTO.md  README.md  pyproject.toml
backend/: database.py  fixture_snapshot.json  main.py  models_db.py  requirements.txt
backend/routers/: bets.py  models.py  predictions.py  settings.py
backend/services/: resolver.py  runner.py  scheduler.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Dashboard.tsx  EquityChart.tsx  History.tsx  ModelStatus.tsx  NewBetForm.tsx  Predictions.tsx  Settings.tsx  StatCard.tsx
frontend/src/hooks/: useBettingStore.ts
frontend/src/lib/: api.ts  calculations.ts  constants.ts  format.ts  types.ts
research/: backtest_pinnacle.py  eval_gamma.py  fix_db_probs.py  grid_results.json  opportunities.json  optimize_filters.py  pinnacle_bets.json  report_pinnacle_vs_gamma_Feb2026.md  report_v2_gamma_nll_Feb2026.md  retrain_gamma.py  walk_forward_2526.py  wf_results.json
tests/: test_ps3838.py
trading_deportivo/: __init__.py  backtest.py  betting.py  config.py  data.py  model.py  odds.py  team_mappings.py
